# prism-data-layer

./: .gitignore  .golangci.yml  .pylintrc  BUILDING.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  MAKEFILE_UPDATES.md  Makefile  PRD.md  README.md  SESSION_COMPLETE.md  conversation.txt  docker-compose.admin-cluster.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  ruff.toml
.claude/commands/: check-pr.md  commit-format.md  doc-guide.md  submit-pr.md  tdd-guide.md  test-lint.md
.githooks/: README.md  pre-commit
.github/: MERGE_QUEUE_SETUP.md
.github/workflows/: README.md  acceptance-test-backend.yml  acceptance-test-pattern.yml  acceptance-tests.yml  ci.yml  docs.yml  lint-workflows.yml  merge-queue.yml  pattern-acceptance-tests.yml  pre-commit.yml
backends/kafka/: config.yaml
backends/memstore/: Dockerfile  config.yaml
backends/multicast_registry/: coverage.out
backends/nats/: coverage.out
backends/redis/: main.go.old
cli/: Makefile  README.md  pyproject.toml
cli/prismctl/: __init__.py  auth.py  client.py  config.py  main.py
cli/tests/: __init__.py  test_auth.py
cli/tests/integration/: README.md  __init__.py  conftest.py  dex-config.yaml  dex_server.py  docker-compose.dex.yml  test_cli_endtoend.py  test_password_flow.py  test_token_refresh.py  test_userinfo.py
cmd/pattern-launcher/: go.mod  main.go
cmd/plugin-watcher/: go.mod  main.go
cmd/prism-admin/: Dockerfile  README.md  cluster_integration_test.go  config.go  control_plane.go  control_plane_raft.go  fsm.go  fsm_test.go  go.mod  go.sum  http_server.go  metrics.go  namespace.go  partition_manager.go  raft.go  root.go  serve.go  storage.go  storage_test.go
cmd/prism-launcher/: go.sum  main.go
cmd/prism-loadtest/: go.mod  go.sum  load-test-results.txt  main.go
cmd/prismctl/: Makefile  go.mod  go.sum  main.go
deployments/poc4-multicast-registry/: Dockerfile.loadtest  README.md  docker-compose.yml
docs/: 404.html  RFC-001-prism-architecture.md  RFC-002-data-layer-interface.md  RFC-003-admin-interface.md  analysis-summary.md  flow-diagrams.md  index.html  protobuf-data-model-plan.md  search-index.json  sitemap.xml
docs-cms/: CHANGELOG.md  analysis-summary.md  docs-project.yaml  flow-diagrams.md  intro.md  prd.md  protobuf-data-model-plan.md
docs-cms/adr/: 000-template.md  002-client-originated-configuration.md  005-backend-plugin-architecture.md  006-namespace-multi-tenancy.md  010-caching-layer.md  011-implementation-roadmap.md  014-go-concurrency-patterns.md  019-rust-async-concurrency-patterns.md  021-rust-structured-logging.md  024-layered-interface-hierarchy.md  027-admin-api-grpc.md  030-schema-recording-protobuf-tags.md  033-capability-api.md  034-sharding-strategy.md  036-sqlite-config-storage.md  037-kubernetes-operator.md  039-cli-acceptance-testing.md  040-uv-bootstrap-installer.md  041-graph-database-backend.md  043-plugin-capability-discovery.md  044-tinkerpop-gremlin-plugin.md  ADR-000-template.md  ADR-001-rust-for-proxy.md  ADR-003-protobuf-single-source-of-truth.md  ADR-004-local-first-testing.md  ADR-006-namespace-multi-tenancy.md  ADR-007-authentication-authorization.md  ADR-008-observability-strategy.md  ADR-009-shadow-traffic-migrations.md  ADR-010-caching-layer.md  ADR-011-implementation-roadmap.md  ADR-012-go-for-tooling.md  ADR-013-go-error-handling-strategy.md  ADR-014-go-concurrency-patterns.md  ADR-015-go-testing-strategy.md  ADR-016-go-cli-configuration.md  ADR-017-go-structured-logging.md  ADR-018-rust-error-handling-strategy.md  ADR-019-rust-async-concurrency-patterns.md  ADR-020-rust-testing-strategy.md  (+89 more)
docs-cms/memos/: MEMO-001-wal-transaction-flow.md  MEMO-002-admin-protocol-review.md  MEMO-003-documentation-first-development.md  MEMO-004-backend-plugin-implementation-guide.md  MEMO-005-client-protocol-design-philosophy.md  MEMO-006-backend-interface-decomposition-schema-registry.md  MEMO-007-podman-scratch-container-demo.md  MEMO-008-message-schema-configuration.md  MEMO-008-parallel-linting-system.md  MEMO-008-pattern-launcher-quickstart.md  MEMO-008-poc1-edge-case-analysis.md  MEMO-008-vault-token-exchange-flow.md  MEMO-009-poc4-complete-summary.md  MEMO-009-topaz-local-authorizer-configuration.md  MEMO-010-loadtest-results-100rps.md  MEMO-010-poc1-edge-case-analysis.md  MEMO-012-developer-experience.md  MEMO-012-pattern-sdk-shared-complexity.md  MEMO-018-poc4-complete-summary.md  (+30 more)
docusaurus/: docusaurus.config.ts  navigation.config.ts  package-lock.json  package.json  sidebar-generator.ts  sidebars-adr.ts  sidebars-memos.ts  sidebars-netflix.ts  sidebars-prds.ts  sidebars-rfc.ts  validate_mdx.mjs
local-dev/: docker-compose.dex.yml  start-dex.sh
patterns/: .golangci.yml  Makefile  README.md
plugins/: Makefile  README.md
prism-operator/: CHANGELOG.md  KEDA_INSTALL_GUIDE.md  Makefile  QUICK_START.md  README.md  TEST_REPORT.md  go.mod  go.sum
prism-proxy/: build.rs
proto/: buf.gen.go.yaml  buf.gen.python.yaml  buf.gen.rust.yaml  buf.yaml
proxy/: Cargo.toml  build.rs
proxy/src/: lib.rs  main.rs  proto.rs
proxy/src/config/: mod.rs
proxy/src/pattern/: client.rs  mod.rs
proxy/src/router/: mod.rs
proxy/src/server/: keyvalue.rs  mod.rs
proxy/tests/: edge_cases_test.rs  integration_test.rs
tests/: IMPROVEMENTS.md  README.md
tooling/: PARALLEL_TESTING.md  README.md  __init__.py  __main__.py  acceptance_summary.py  add_adr_ids.py  add_memo_ids.py  add_netflix_ids.py  add_project_id_to_docs.py  add_readme_frontmatter.py  add_rfc_ids.py  add_uuid_to_docs.py  bootstrap.py  build_docs.py  cleanup_document_titles.py  convert_to_frontmatter.py  doc_schemas.py  fix_all_code_fences.py  fix_broken_links.py  fix_code_blocks_proper.py  fix_cross_plugin_links.py  fix_doc_links.py  fix_mdx_code_blocks.py  fix_mdx_syntax.py  migrate_docs_format.py  parallel_acceptance_test.py  parallel_lint.py  parallel_test.py  pre_lint_docs.py  remove_standalone_text_blocks.py  rename_docs_lowercase.py  test_consumer_matrix.py  test_rename_docs.py  update_rfc022.py  validate_docs.py  validate_docs.py.backup
tools/: .gitignore  README.md  go.mod  go.sum
(+2465 files in other folders)
