[package]
name = "prism-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Prism Team"]
description = "High-performance Rust proxy for Prism data access gateway"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# HTTP/gRPC utilities
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"

# Process management (for plugin spawning)
nix = { version = "0.29", features = ["process", "signal"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
# Testing
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

# Async testing helpers
tokio-test = "0.4"

[[bin]]
name = "prism-proxy"
path = "src/main.rs"

[lib]
name = "prism_proxy"
path = "src/lib.rs"
